--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@
         /* Research Interests */
         .interests-container {
             display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
+            flex-direction: column;
+            gap: 30px;
         }
         
         .interest-item {
             background-color: white;
-            padding: 20px;
+            padding: 25px;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            flex: 1 1 300px;
+            width: 100%;
         }
         
         .interest-item h3 {
