--- a/index.html
+++ b/index.html
@@ -527,6 +527,14 @@
                         <li>"Yield Stress Materials in Soft Condensed Matter"</li>
                         <li>"Soft matter physics of the ground beneath our feet"</li>
                     </ul>
+
+                    <p style="margin-top: 20px;">Additional resources:</p>
+                    <ul style="list-style-type: disc; margin-left: 20px; margin-top: 10px;">
+                        <li><a href="http://neuralnetworksanddeeplearning.com/index.html" target="_blank">"Neural Networks and Deep Learning" - Online Book</a></li>
+                        <li><a href="Siever--Linux_in_a_Nutshell_6th_Edition.pdf" target="_blank">"Basic Linux Commands" - PDF Guide</a>
+                            <!-- To add this PDF: Upload basic_linux_commands.pdf to your GitHub repository, then the link will work -->
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
